--- a/sass/modules/counter/_counter-card-two.scss
+++ b/sass/modules/counter/_counter-card-two.scss
@@ -10,6 +10,7 @@
         // grid-template-columns: repeat(2, 1fr);
       }
       @include sm {
+        border-color: transparent;
         grid-template-columns: repeat(1, 1fr);
       }
     }
